Fix bogus assert in JIT exception handler (bug 601400, r=dmandelin).